# virtual_modular

./: .gitignore  Cargo.toml  README.md  kakoune_syntax_definition.kak  record.sh  record_with_mic.sh
.cargo/: config.toml
code_generation_example/: Cargo.toml  build.rs  synth.synth
code_generation_example/src/: main.rs
code_generation_macro/: Cargo.toml
code_generation_macro/src/: lib.rs
core_nodes/: Cargo.toml
core_nodes/src/: abc.rs  arithmetic.rs  clock.rs  computation.rs  delay_and_reverb.rs  distortion.rs  envelope.rs  filter.rs  lib.rs  misc.rs  oscillator.rs  performance.rs  quantizer.rs  randomization.rs  sequencer.rs  topological.rs  tuning.rs  utils.rs  waveguide.rs
definition_language/: Cargo.toml  README.md  kakoune_syntax_definition.kak
definition_language/examples/: code_generation.rs
definition_language/src/: code_generation.rs  lib.rs  main.rs
dynamic_environment/: Cargo.toml  README.md
dynamic_environment/examples/: drums.synth  generative_melody.synth
dynamic_environment/src/: lib.rs  main.rs
examples/: code_gen.rs  dynamic_host.rs  simple_host.rs
graph/: Cargo.toml
graph/src/: lib.rs
src/: code_generator.rs  dynamic_graph.rs  instruments.rs  lib.rs  simd_graph.rs  type_list.rs  voices.rs
