[package]
name = "virtual_modular"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2021"

[features]
instrument = []

[dependencies]
rand = "0.8.3"
concat-idents = "1.1.2"
gilrs = "0.8.1"
glam = "0.16.0"
ringbuf = "0.2.5"
typenum = "1.13.0"
generic-array = "0.14.4"
virtual_modular_graph = { path = "./graph" }
virtual_modular_core_nodes = { path = "./core_nodes" }
dyn-clone = "1.0.4"
indexmap = "1.6.2"

[dev-dependencies]
portmidi = "0.2.5"
wmidi = "4.0.6"
jack = "0.7.1"
cpal = {version="0.13", features=["jack"]}
