[package]
name = "virtual_modular"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2021"

[features]
instrument = []

[dependencies]
typenum = "1.14"
generic-array = "0.14"
virtual_modular_graph = { path = "./graph" }
dyn-clone = "1"

[dev-dependencies]
hound = "3.4.0"
virtual_modular_core_nodes = { path = "./core_nodes" }
